# SketchToJson

./: .gitignore  NpyShape.py  README.md  api.py  classify_segment.py  createForm.py  dataset_style.py  image_convert.py  main.py  make_HashDataSet.py  make_arrowDataSet.py  make_chunk.py  make_handtriangleDataSet.py  make_plusDataSet.py  make_starDataSet.py  make_structure.py  preview_npy_dataset.py  pyproject.toml  segmentation.py  sketch_variation.py  symbol_recognizer.py  test_dataset_variations.py  test_my_letter.py  test_my_shape.py  train_emnist_letters.py  train_shape.py  worldmap.json
dummy/: alpha_to_json.py  chunks.json  classify_segment.py  line_to_tiles.py  test_my_letter.py  train_emnist_letters.py
map_json/: worldmap.json  worldmap_enemy.json  worldmap_with_enemies.json
web/teammate_project/: .gitignore
web/teammate_project/backend/: README.md  requirements.txt
web/teammate_project/backend/app/: main.py
web/teammate_project/src/pages/: index.tsx
web/teammate_project/src/pages/_components/tool-panel/: tool-panel.tsx
