[project]
name = "sketchtojson"
version = "0.1.0"
description = "Convert segmented sketch images into JSON form data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "python-multipart>=0.0.29",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "uvicorn>=0.48.0",
]

[tool.uv]
package = false
